--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 
+<img src="Homem Negro Pare.jpg"
+alt="Homem negro extendendo a mao para parar"
+title="homem negro com a mao extendida para parar">
+<style>
+    img {
+        width: 1080px;
+        height: 1080px;
+        border: solid 4px rgb(0, 0, 0);
+        border-radius: 20%;
+    }
+</style>
